CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

PROJECT(Sort VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)


IF(MSVC)
MESSAGE("MSVC")
ADD_DEFINITIONS(-DUNICODE)
ADD_COMPILE_OPTIONS("/utf-8")
ENDIF()

INCLUDE_DIRECTORIES(include)

ADD_EXECUTABLE(bubble test/bubble.cpp)
ADD_EXECUTABLE(selection test/selection.cpp)
ADD_EXECUTABLE(insertion test/insertion.cpp)

TARGET_PRECOMPILE_HEADERS(bubble PRIVATE ./include/pch.hpp)
TARGET_PRECOMPILE_HEADERS(selection REUSE_FROM bubble)
TARGET_PRECOMPILE_HEADERS(insertion REUSE_FROM bubble)